--- a/templates/login.html
+++ b/templates/login.html
@@ -1,40 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - Secure Cloud</title>
-  <script>
-    async function doLogin(event) {
-      event.preventDefault();
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
-      const res = await fetch('/login', {
-        method: 'POST',
-        headers: {'Content-Type': 'application/json'},
-        body: JSON.stringify({ email, password })
-      });
-      const data = await res.json();
-      if (data.success) {
-        localStorage.setItem('token', data.token);
-        window.location.href = '/dashboard';
-      } else {
-        document.getElementById('message').innerText = data.message;
-      }
-    }
-  </script>
-</head>
-<body class="p-4">
-  <h1>Login</h1>
-  <form onsubmit="doLogin(event)">
-    <label for="email">Email:</label><br>
-    <input type="email" id="email" name="email" required><br><br>
-    <label for="password">Password:</label><br>
-    <input type="password" id="password" name="password" required><br><br>
-    <button type="submit">Login</button>
-  </form>
-  <p id="message" style="color: red;"></p>
-  <p>Don't have an account? <a href="/signup">Sign up</a></p>
-</body>
-</html>
+{% extends 'layout.html' %}
+{% block title %}Log In{% endblock %}
+{% block content %}
+  <div class="card">
+    <h1>Log In</h1>
+    <form id="login-form">
+      <input name="email" type="email"    placeholder="Email"    required />
+      <input name="password" type="password" placeholder="Password" required />
+      <button type="submit">Log In</button>
+      <p id="login-msg" class="msg"></p>
+    </form>
+    <p>Don't have an account? <a href="{{ url_for('signup') }}">Sign Up</a></p>
+  </div>
+{% endblock %}
